// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsoleViewの単体テスト consoleView初期状態のスナップショットテスト 1`] = `
<div>
  <main
    class="row-start-2 h-[29.125rem] max-w-[62.5rem] cursor-text overflow-hidden rounded-lg border border-consoleHeader text-[rgb(204,204,204)] lg:col-span-4 lg:col-start-2"
  >
    <h2
      class="h-6 bg-consoleHeader pl-3 text-base text-white"
    >
      Git Empty
    </h2>
    <div
      class="min-h-full bg-console px-3 pt-7"
    >
      <p>
        リモートブランチをoriginに登録したい
      </p>
      <form
        class="mt-6 flex max-w-full flex-col gap-1 sm:flex-row"
      >
        <label
          for="console"
        >
          C:users/gitEmpty&gt;
        </label>
        <input
          autocapitalize="off"
          autocomplete="off"
          autocorrect="off"
          class="flex-1 bg-transparent outline-none"
          id="console"
          name="console"
          type="text"
        />
      </form>
    </div>
  </main>
</div>
`;

exports[`ConsoleViewの単体テスト consoleView終了状態のスナップショットテスト 1`] = `
<div>
  <main
    class="row-start-2 h-[29.125rem] max-w-[62.5rem] cursor-text overflow-hidden rounded-lg border border-consoleHeader text-[rgb(204,204,204)] lg:col-span-4 lg:col-start-2"
  >
    <h2
      class="h-6 bg-consoleHeader pl-3 text-base text-white"
    >
      Git Empty
    </h2>
    <div
      class="min-h-full bg-console px-3 pt-7"
    >
      <p />
      <div
        class="pt-4"
      >
        <p
          class="text-xl font-bold"
        >
          Congratulations!
        </p>
        <p
          class="pt-2"
        >
          ここまで遊んでくれてありがとうございます
        </p>
        <p>
          是非他の難易度も遊んでみてください
        </p>
        <form
          class="mt-6 flex max-w-full flex-col gap-1 sm:flex-row"
        >
          <label
            for="finishInput"
          >
            もう一度同じ難易度で遊びますか？
            (y/n)
          </label>
          <input
            autocapitalize="off"
            autocomplete="off"
            autocorrect="off"
            class="bg-transparent outline-none"
            id="finishInput"
            name=""
            type="text"
          />
        </form>
      </div>
    </div>
  </main>
</div>
`;
